# CPP_training

week1/day1/: Dockerfile  hello.cpp  spinup.sh
week1/day2/: a.out  assign1.cpp  assign2.txt  assign3.txt  assign4.txt  assign5.cpp
week1/day3/: assign1.cpp  assign2.cpp
week1/day4/: assign1.cpp  assign2.md  assign3.md  assign4.md  assign5.md
week1/day5/: assign1.cpp
week1/week1/: Makefile  a.out  assign1.cpp  assign1.h  password.txt  spinup.sh
week2/Practice/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  Makefile  a.out  assign1.cpp  assign2.cpp  calandar.cpp  calandar.h  short_answers.md  test.cpp
week2/day1/: a.out  assign1.cpp  assign2.cpp  assign2.md  assign3.cpp
week2/day3/: a.out  assign1.cpp  assign1.h
week2/day4/: assign1.cpp  assign2.cpp  merge.cpp  merge.h
week2/week2/: Makefile  assign1.cpp  assign1.h  bank_account.pb.cc  bank_account.pb.h  bank_account.proto  binary  build.sh  password.txt  test.cpp
week3/day10/: Person.cpp  Person.h  a.out  assign1.cpp
week3/day11/: Sentence.cpp  Sentence.h  main.cpp
week3/day12/: MyString.cpp  MyString.h  main.cpp
week3/day13/: Shape2D.cpp  Shape2D.h  main.cpp
week3/day14/: Shape2D.cpp  Shape2D.h  a.out  assign1.cpp  assign2.cpp
week4/day15/: a.out  main.cpp
week4/day16/: a.out  main.cpp
week4/day17/: Account.cpp  Account.h  main.cpp
week4/day18/: MyVector.cpp  MyVector.h  main.cpp
week4/day19/: iteractions.json  main.cpp
week5/day20/: main.cpp
week5/day21/: Makefile  README.md  iteractions.json  main.cpp  sleep.json
week5/day22/: README.md  main.cpp
week5/day23/: Makefile  (+5 more)
(+26 files in other folders)
